# RUSTEDCHIP-8

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chip.rs  display.rs  font.rs  main.rs  timer.rs
