[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
derive = "1.0.0"
device_query = "1.1.2"
features = "0.10.0"
macroquad = "0.4.2"
rand = "0.8.5"
futures = "0.3"
getrandom = { version = "0.2.2", features = ["js"]}

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }